# mcp-vitals

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml  ref.html  ref.json
.github/workflows/: ci.yml
docs/: index.html
examples/: sample_server.py
launch/: STATE-OF-MCP.md  results.json  run_launch.py
src/mcpvitals/: __init__.py  cli.py  connect.py  l1_static.py  l2_behavioral.py  l3_agent.py  l4_adversarial.py  l5_ops.py  report.py
tests/: test_l1.py  test_l2.py  test_l3.py  test_l4l5.py
