[project]
name = "mcp-vitals"
version = "0.1.0"
description = "Reliability grades for MCP servers — behavioral + agent-usability evals you run yourself, in CI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "enached134-ctrl" }]
keywords = ["mcp", "model-context-protocol", "evals", "reliability", "agents", "llm"]

dependencies = [
  "fastmcp>=2.3",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8.2"]

[project.scripts]
mcpvitals = "mcpvitals.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpvitals"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
